log/build_2024-01-03_14-02-32/my_gui/stderr.log
  File "/home/niklas/ros2_gui/install/my_gui/lib/python3.10/site-packages/my_gui/my_gui_node.py", line 35
    executor = MultiThreadedExecutor()        print("HMI preparation complete")
                                              ^^^^^
SyntaxError: invalid syntax

